Update webpack to build separate chrome/firefox extensions

--- a/package.json
+++ b/package.json
@@ -38,11 +38,14 @@
   },
   "scripts": {
     "web-run": "npm run web-run:chrome",
-    "web-run:chrome": "cd dist && web-ext run --start-url https://www.mousehuntgame.com -t chromium",
-    "web-run:firefox": "cd dist && web-ext run --start-url https://www.mousehuntgame.com",
-    "build": "webpack --config webpack/webpack.prod.js",
-    "build:dev": "webpack --config webpack/webpack.dev.js",
-    "build:watch": "webpack --config webpack/webpack.dev.js --watch",
+    "web-run:chrome": "web-ext run --start-url https://www.mousehuntgame.com -t chromium --source-dir dist/chrome",
+    "web-run:firefox": "web-ext run --start-url https://www.mousehuntgame.com --source-dir dist/firefox",
+    "build": "webpack",
+    "build:watch": "webpack --watch",
+    "build:firefox": "webpack --env browser=firefox",
+    "build:firefox:watch": "webpack --env browser=firefox --watch",
+    "build:prod": "webpack --mode production",
+    "build:prod:firefox": "webpack --mode production --env browser=firefox",
     "dev": "npm run build:dev && concurrently \"npm run web-run\" \"npm run build:watch\"",
     "dev:firefox": "npm run build:dev && concurrently \"npm run web-run:firefox\" \"npm run build:watch\"",
     "lint": "eslint .",
@@ -54,7 +57,9 @@
     "url": "git+https://github.com/mh-community-tools/mh-helper-extension.git"
   },
   "devDependencies": {
+    "@types/chrome": "^0.0.287",
     "@types/jest": "^29.5.12",
+    "@types/node": "^22.10.2",
     "@typescript-eslint/eslint-plugin": "^7.17.0",
     "@typescript-eslint/parser": "^7.17.0",
     "concurrently": "^8.2.2",
@@ -62,6 +67,7 @@
     "eslint": "^8.57.0",
     "fork-ts-checker-webpack-plugin": "^9.0.2",
     "got-cjs": "^12.5.4",
+    "html-webpack-plugin": "^5.6.3",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "mergician": "^2.0.2",
