--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -64,10 +64,27 @@ jobs:
     - name: Install dependencies
       run: npm ci
 
-    - name: Build package
+    - name: Build Chrome package
       run: npm run build
+
+    - name: Build Firefox package
+      run: npm run build:firefox
 
     - name: Run tests
       env:
         CI: true
       run: npm test
+
+    - name: Upload Chrome artifact
+      uses: actions/upload-artifact@v4
+      with:
+        name: dist-chrome.zip
+        path: dist/chrome/*
+        if-no-files-found: error
+
+    - name: Upload Firefox artifact
+      uses: actions/upload-artifact@v4
+      with:
+        name: dist-firefox.xpi
+        path: dist/firefox/*
+        if-no-files-found: error
