--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -81,8 +81,10 @@ jobs:
       - name: Update manifests
         run: |
           echo "New Version: ${{ env.EXT_VERSION }}"
-          jq --arg version ${{ env.EXT_VERSION }} '.version = $version' src/manifest.v3.chrome.json > src/manifest.v3.chrome.json
-          jq --arg version ${{ env.EXT_VERSION }} '.version = $version' src/manifest.v3.firefox.json > src/manifest.v3.firefox.json
+          jq --arg version ${{ env.EXT_VERSION }} '.version = $version' src/manifest.v3.chrome.json > src/manifest.v3.chrome.json.tmp
+          jq --arg version ${{ env.EXT_VERSION }} '.version = $version' src/manifest.v3.firefox.json > src/manifest.v3.firefox.json.tmp
+          mv src/manifest.v3.chrome.json.tmp src/manifest.v3.chrome.json
+          mv src/manifest.v3.firefox.json.tmp src/manifest.v3.firefox.json
 
       - name: Install dependencies
         run: npm ci
