--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "eslint": "^9.22.0",
     "eslint-plugin-jest": "^28.11.0",
     "fork-ts-checker-webpack-plugin": "^9.0.2",
+    "globals": "^16.0.0",
     "got-cjs": "^12.5.4",
     "html-webpack-plugin": "^5.6.3",
     "jest": "^29.7.0",
