Fix env variables in webpack build

--- a/package.json
+++ b/package.json
@@ -44,8 +44,8 @@
     "build:watch": "webpack --watch",
     "build:firefox": "webpack --env browser=firefox",
     "build:firefox:watch": "webpack --env browser=firefox --watch",
-    "build:prod": "webpack --mode production",
-    "build:prod:firefox": "webpack --mode production --env browser=firefox",
+    "build:prod": "webpack --env mode=production",
+    "build:prod:firefox": "webpack --env mode=production --env browser=firefox",
     "dev": "npm run build && concurrently \"npm run web-run\" \"npm run build:watch\"",
     "dev:firefox": "npm run build:firefox && concurrently \"npm run web-run:firefox\" \"npm run build:firefox:watch\"",
     "lint": "eslint .",
