--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "html-webpack-plugin": "^5.6.3",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "jest-mock-extended": "^3.0.7",
     "mergician": "^2.0.2",
     "ts-jest": "^29.3.1",
     "ts-loader": "^9.5.1",
