--- a/package.json
+++ b/package.json
@@ -37,17 +37,20 @@
     "url": "https://github.com/mh-community-tools/mh-helper-extension/issues"
   },
   "scripts": {
-    "web-run": "npm run web-run:chrome",
-    "web-run:chrome": "web-ext run --start-url https://www.mousehuntgame.com -t chromium --source-dir dist/chrome",
-    "web-run:firefox": "web-ext run --start-url https://www.mousehuntgame.com --source-dir dist/firefox",
-    "build": "webpack",
-    "build:watch": "webpack --watch",
-    "build:firefox": "webpack --env browser=firefox",
-    "build:firefox:watch": "webpack --env browser=firefox --watch",
-    "build:prod": "webpack --env mode=production",
-    "build:prod:firefox": "webpack --env mode=production --env browser=firefox",
-    "dev": "npm run build && concurrently \"npm run web-run\" \"npm run build:watch\"",
-    "dev:firefox": "npm run build:firefox && concurrently \"npm run web-run:firefox\" \"npm run build:firefox:watch\"",
+    "build": "npm run build:chrome",
+    "build:watch": "npm run build:watch:chrome",
+    "build:chrome": "cross-env BROWSER=chrome webpack",
+    "build:firefox": "cross-env BROWSER=firefox webpack",
+    "build:watch:chrome": "npm run build:chrome -- --watch",
+    "build:watch:firefox": "npm run build:firefox -- --watch",
+    "build:prod:chrome": "cross-env NODE_ENV=production npm run build:chrome",
+    "build:prod:firefox": "cross-env NODE_ENV=production npm run build:firefox",
+    "dev": "npm run dev:chrome",
+    "dev:chrome": "npm run build:chrome && concurrently \"npm run start:chrome\" \"npm run build:watch:chrome\"",
+    "dev:firefox": "npm run build:firefox && concurrently \"npm run start:firefox\" \"npm run build:watch:firefox\"",
+    "start": "npm run start:chrome",
+    "start:chrome": "web-ext run --start-url https://www.mousehuntgame.com -t chromium --source-dir dist/chrome",
+    "start:firefox": "web-ext run --start-url https://www.mousehuntgame.com --source-dir dist/firefox",
     "lint": "eslint .",
     "test": "jest"
   },
@@ -63,6 +66,7 @@
     "@types/node": "^24.3.0",
     "concurrently": "^9.2.1",
     "copy-webpack-plugin": "^13.0.1",
+    "cross-env": "^10.0.0",
     "eslint": "^9.34.0",
     "eslint-plugin-jest": "^29.0.1",
     "fork-ts-checker-webpack-plugin": "^9.1.0",
