Fix web-ext lint. Remove sample workflow.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,9 +39,7 @@ jobs:
       run: npm run build:firefox
 
     - name: "web-ext lint"
-      run: |
-        cd dist/firefox
-        npm exec web-ext lint --verbose
+      run: npm run lint:webext
 
   test:
     name: Test
