--- a/src/manifest.json
+++ b/src/manifest.json
@@ -51,7 +51,7 @@
     },
 
     "__firefox__background": {
-        "scripts": ["background.js"]
+        "scripts": ["scripts/background.js"]
     },
 
     "options_ui": {
