--- a/package.json
+++ b/package.json
@@ -62,9 +62,10 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.34.0",
-    "@types/chrome": "^0.1.4",
+    "@types/chrome": "^0.1.12",
     "@types/jest": "^30.0.0",
     "@types/node": "^24.3.0",
+    "@types/webextension-polyfill": "^0.12.3",
     "concurrently": "^9.2.1",
     "copy-webpack-plugin": "^13.0.1",
     "cross-env": "^10.0.0",
@@ -84,6 +85,7 @@
     "typescript": "^5.9.2",
     "typescript-eslint": "^8.41.0",
     "web-ext": "^8.9.0",
+    "webextension-polyfill": "^0.12.0",
     "webpack": "^5.101.3",
     "webpack-cli": "^6.0.1",
     "webpack-merge": "^6.0.1"
