Fix crown tracker and implement new messaging system
- Updated various dependencies in package.json for better compatibility and performance.
- Enhanced the messaging system between content scripts and background scripts to handle King's Crown data submissions more effectively.
- Implemented a new CrownTracker module to monitor and submit crown data.
- Improved error handling and logging throughout the application.
- Refactored environment service to support different environments (development and production).
- Added tests for the EnvironmentService to ensure correct URL generation based on the environment.
- Updated webpack configuration to include new entry points for content scripts.

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -16,6 +16,7 @@
     },
 
     "permissions": [
+        "alarms",
         "notifications",
         "tabs",
         "storage"
@@ -25,7 +26,10 @@
         "all_frames" : true,
         "matches": ["*://www.mousehuntgame.com/*"],
         "css": ["css/user-notify.css"],
-        "js": ["scripts/content.js"]
+        "js": [
+            "scripts/content/content-message-handler.js",
+            "scripts/content.js"
+        ]
     }],
 
     "host_permissions": [
