--- a/package.json
+++ b/package.json
@@ -62,9 +62,11 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.34.0",
+    "@mswjs/interceptors": "^0.39.7",
     "@types/chrome": "^0.1.12",
     "@types/jest": "^30.0.0",
     "@types/node": "^24.3.0",
+    "@types/qs": "^6.14.0",
     "@types/webextension-polyfill": "^0.12.3",
     "concurrently": "^9.2.1",
     "copy-webpack-plugin": "^13.0.1",
@@ -79,6 +81,7 @@
     "jest-environment-jsdom": "^30.1.2",
     "jest-mock-extended": "^4.0.0",
     "mergician": "^2.0.2",
+    "qs": "^6.14.0",
     "ts-jest": "^29.4.1",
     "ts-loader": "^9.5.4",
     "tsconfig-paths-webpack-plugin": "^4.1.0",
