--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
     "start:firefox": "web-ext run --start-url https://www.mousehuntgame.com --source-dir dist/firefox",
     "lint": "eslint .",
     "lint:webext": "web-ext lint --source-dir dist/firefox --verbose",
-    "test": "jest"
+    "test": "vitest --run --project=unit"
   },
   "private": true,
   "repository": {
@@ -64,7 +64,6 @@
     "@eslint/js": "^9.36.0",
     "@mswjs/interceptors": "^0.39.7",
     "@types/chrome": "^0.1.17",
-    "@types/jest": "^30.0.0",
     "@types/jquery": "^3.5.33",
     "@types/node": "^24.6.1",
     "@types/qs": "^6.14.0",
@@ -73,26 +72,25 @@
     "copy-webpack-plugin": "^13.0.1",
     "cross-env": "^10.1.0",
     "eslint": "^9.36.0",
-    "eslint-plugin-jest": "^29.0.1",
+    "eslint-plugin-vitest": "^0.5.4",
     "fork-ts-checker-webpack-plugin": "^9.1.0",
     "globals": "^16.4.0",
     "got-cjs": "^12.5.4",
     "html-webpack-plugin": "^5.6.4",
-    "jest": "^30.2.0",
-    "jest-environment-jsdom": "^30.2.0",
-    "jest-mock-extended": "^4.0.0",
+    "jquery": "^3.6.4",
     "mergician": "^2.0.2",
     "qs": "^6.14.0",
-    "ts-jest": "^29.4.4",
     "ts-loader": "^9.5.4",
     "tsconfig-paths-webpack-plugin": "^4.1.0",
     "typescript": "^5.9.3",
     "typescript-eslint": "^8.45.0",
-    "web-ext": "^8.9.0",
+    "vite-tsconfig-paths": "^5.1.4",
+    "vitest": "^3.2.4",
+    "vitest-mock-extended": "^3.1.0",
+    "web-ext": "^8.10.0",
     "webextension-polyfill": "^0.12.0",
     "webpack": "^5.102.0",
-    "webpack-cli": "^6.0.1",
-    "webpack-merge": "^6.0.1"
+    "webpack-cli": "^6.0.1"
   },
   "dependencies": {
     "rxjs": "^7.8.2",
