--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -59,8 +59,11 @@ jobs:
     - name: Install dependencies
       run: npm ci
 
-    - name: Test
+    - name: Unit Test
       run: npm test
+
+    - name: Integration Test
+      run: npm run test:e2e
 
     - name: Build Chrome package
       run: npm run build
