--- a/package.json
+++ b/package.json
@@ -53,7 +53,8 @@
     "start:firefox": "web-ext run --start-url https://www.mousehuntgame.com --source-dir dist/firefox",
     "lint": "eslint .",
     "lint:webext": "web-ext lint --source-dir dist/firefox --verbose",
-    "test": "vitest --run --project=unit"
+    "test": "vitest --run --project=unit",
+    "test:e2e": "vitest --run --project=e2e"
   },
   "private": true,
   "repository": {
@@ -76,9 +77,11 @@
     "fork-ts-checker-webpack-plugin": "^9.1.0",
     "globals": "^16.4.0",
     "got-cjs": "^12.5.4",
+    "happy-dom": "^19.0.2",
     "html-webpack-plugin": "^5.6.4",
     "jquery": "^3.6.4",
     "mergician": "^2.0.2",
+    "nock": "^14.0.10",
     "qs": "^6.14.0",
     "ts-loader": "^9.5.4",
     "tsconfig-paths-webpack-plugin": "^4.1.0",
