--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "@types/node": "^24.6.1",
     "@types/qs": "^6.14.0",
     "@types/webextension-polyfill": "^0.12.4",
+    "@vitest/coverage-v8": "^3.2.4",
     "concurrently": "^9.2.1",
     "copy-webpack-plugin": "^13.0.1",
     "cross-env": "^10.1.0",
