--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "@types/qs": "^6.14.0",
     "@types/webextension-polyfill": "^0.12.4",
     "@vitest/coverage-v8": "^3.2.4",
+    "@webext-core/messaging": "^2.3.0",
     "concurrently": "^9.2.1",
     "copy-webpack-plugin": "^13.0.1",
     "cross-env": "^10.1.0",
