--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "@types/node": "^24.6.1",
     "@types/qs": "^6.14.0",
     "@types/webextension-polyfill": "^0.12.4",
+    "@vitest/eslint-plugin": "^1.3.20",
     "@vitest/coverage-v8": "^3.2.4",
     "@webext-core/messaging": "^2.3.0",
     "concurrently": "^9.2.1",
@@ -77,7 +78,6 @@
     "cross-env": "^10.1.0",
     "eslint": "^9.36.0",
     "eslint-plugin-perfectionist": "^4.15.0",
-    "eslint-plugin-vitest": "^0.5.4",
     "fork-ts-checker-webpack-plugin": "^9.1.0",
     "globals": "^16.4.0",
     "got-cjs": "^12.5.4",
