--- a/src/manifest.json
+++ b/src/manifest.json
@@ -70,6 +70,10 @@
         "default_popup": "popup.html"
     },
 
+    "omnibox": {
+        "keyword": "mhct"
+    },
+
     "__firefox__browser_specific_settings": {
         "gecko": {
             "id": "{801e5516-3311-4ee7-8185-7da12ffab807}"
